Refactor footer and lcars fillers

--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_lcars.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_lcars.scss
@@ -71,6 +71,16 @@ $content-padding: 2vw;
   );
 }
 
+.lcars-group__text {
+  @include cap-variable-widths(
+    (
+      font-size: 3.5vw,
+      margin-top: 2vw,
+      padding: 1vw
+    )
+  );
+}
+
 .lcars-group__filler {
   position: relative;
   display: flex;
