Swap out lcars font

--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_variables.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_variables.scss
@@ -1,6 +1,6 @@
 $font-family-sans-serif: Helvetica, Arial, "Lucida Grande", sans-serif;
 $headings-font-family: "federation";
-$lcars-font-family: "lcars context";
+$lcars-font-family: "lcars";
 
 $site-max-width: 900px;
 
