--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_lcars.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_lcars.scss
@@ -66,7 +66,7 @@ $content-padding: 2vw;
   text-align: center;
   @include cap-variable-widths(
     (
-      font-size: 5.5vw,
+      font-size: 5.2vw,
       margin-bottom: 2vw
     )
   );
@@ -86,6 +86,7 @@ $content-padding: 2vw;
 
   em {
     font-style: normal;
+    font-weight: bold;
     text-decoration: underline;
   }
 }
