--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_legend.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_legend.scss
@@ -56,7 +56,7 @@
 
 .legend__item-description {
   grid-area: description;
-  color: $lcars-color-lavender-purple;
+  color: lcars-color("lavender-purple");
   line-height: 1.2;
   text-transform: uppercase;
   @include cap-variable-widths(
