--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_site.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_site.scss
@@ -16,7 +16,7 @@
 
 .site__header {
   font-family: $headings-font-family;
-  color: $lcars-color-tng-blue;
+  color: lcars-color("bright-turquoise");
 
   @include cap-variable-widths(
     (
