--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -6,13 +6,13 @@
 
 <section class="lcars-group">
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--top">
-        {% include "lcars/_lcars_filler.html" with color="yellow" top_left_inner_elbow=True label="GAME OF BUTTHOLES BOARD" only %}
+        {% include "lcars/_lcars_filler.html" with color="orange-peel" top_left_inner_elbow=True only %}
     </div>
     <div class="lcars-group__left-bar">
-        {% include "lcars/_lcars_filler.html" with color="yellow" top_left_outer_elbow=True only %}
-        {% include "lcars/_lcars_filler.html" with color="purple" label="ALL I DO IS BITS" only %}
-        {% include "lcars/_lcars_filler.html" with color="lilac" label="MAIN COMPUTER CORE" only %}
-        {% include "lcars/_lcars_filler.html" with color="yellow" bottom_left_outer_elbow=True label="DICK JOKES" only %}
+        {% include "lcars/_lcars_filler.html" with color="orange-peel" top_left_outer_elbow=True only %}
+        {% include "lcars/_lcars_filler.html" with color="lavender-purple" label="ALL I DO IS BITS" only %}
+        {% include "lcars/_lcars_filler.html" with color="melrose" label="MAIN COMPUTER CORE" only %}
+        {% include "lcars/_lcars_filler.html" with color="orange-peel" bottom_left_outer_elbow=True label="DICK JOKES" only %}
     </div>
     <div class="lcars-group__content">
         <h2 class="lcars-group__content-header">
@@ -29,25 +29,25 @@
         </p>
     </div>
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--bottom">
-        {% include "lcars/_lcars_filler.html" with color="yellow" bottom_left_inner_elbow=True only %}
+        {% include "lcars/_lcars_filler.html" with color="orange-peel" bottom_left_inner_elbow=True only %}
     </div>
 </section>
 
 <section class="lcars-group">
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--top">
-        {% include "lcars/_lcars_filler.html" with color="yellow" top_left_inner_elbow=True label="SPECIAL SQUARE LEGEND" only %}
+        {% include "lcars/_lcars_filler.html" with color="orange-peel" top_left_inner_elbow=True only %}
     </div>
     <div class="lcars-group__left-bar">
-        {% include "lcars/_lcars_filler.html" with color="yellow" top_left_outer_elbow=True only %}
-        {% include "lcars/_lcars_filler.html" with color="lilac" label="BAD BIT MOMENTS" only %}
-        {% include "lcars/_lcars_filler.html" with color="purple" label="MORNHAMMER" only %}
-        {% include "lcars/_lcars_filler.html" with color="blue" bottom_left_outer_elbow=True label="FUCK BOKAI" only %}
+        {% include "lcars/_lcars_filler.html" with color="orange-peel" top_left_outer_elbow=True only %}
+        {% include "lcars/_lcars_filler.html" with color="melrose" label="BAD BIT MOMENTS" only %}
+        {% include "lcars/_lcars_filler.html" with color="lavender-purple" label="MORNHAMMER" only %}
+        {% include "lcars/_lcars_filler.html" with color="dodger-blue" bottom_left_outer_elbow=True label="FUCK BOKAI" only %}
     </div>
     <div class="lcars-group__content">
         {% include "will_of_the_prophets/board/_legend.html" %}
     </div>
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--bottom">
-        {% include "lcars/_lcars_filler.html" with color="blue" bottom_left_inner_elbow=True only %}
+        {% include "lcars/_lcars_filler.html" with color="dodger-blue" bottom_left_inner_elbow=True only %}
     </div>
 </section>
 
