--- a/will_of_the_prophets/static/will_of_the_prophets/styles/index.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/index.scss
@@ -27,5 +27,6 @@ a:visited {
 @import "./board";
 @import "./lcars";
 @import "./legend";
+@import "./roll-chart";
 @import "./roll-form";
 @import "./site";
