--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -8,7 +8,7 @@
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--top">
         {% include "lcars/_lcars_filler.html" with color="orange-peel" top_left_inner_elbow=True only %}
     </div>
-    <div class="lcars-group__left-bar">
+    <div class="lcars-group__side-bar lcars-group__side-bar--left">
         {% include "lcars/_lcars_filler.html" with color="orange-peel" top_left_outer_elbow=True only %}
         {% include "lcars/_lcars_filler.html" with color="lavender-purple" label="ALL I DO IS BITS" only %}
         {% include "lcars/_lcars_filler.html" with color="melrose" label="MAIN COMPUTER CORE" only %}
@@ -37,7 +37,7 @@
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--top">
         {% include "lcars/_lcars_filler.html" with color="orange-peel" top_left_inner_elbow=True only %}
     </div>
-    <div class="lcars-group__left-bar">
+    <div class="lcars-group__side-bar lcars-group__side-bar--left">
         {% include "lcars/_lcars_filler.html" with color="orange-peel" top_left_outer_elbow=True only %}
         {% include "lcars/_lcars_filler.html" with color="melrose" label="BAD BIT MOMENTS" only %}
         {% include "lcars/_lcars_filler.html" with color="lavender-purple" label="MORNHAMMER" only %}
