--- a/will_of_the_prophets/templates/will_of_the_prophets/roll.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/roll.html
@@ -6,12 +6,12 @@
 {% block content %}
 
 <section class="lcars-group">
-    <div class="lcars-group__left-bar">
-        {% include "lcars/_lcars_filler.html" with color="lavender-purple" bottom_left_outer_elbow=True only %}
+    <div class="lcars-group__side-bar lcars-group__side-bar--left">
+        {% include "lcars/_lcars_filler.html" with color="medium-carmine" bottom_left_outer_elbow=True only %}
     </div>
     <div class="lcars-group__content">
         <h2 class="lcars-group__content-header">
-            You're required to learn as you play… <em class="text-orange">roll!</em>
+            You're required to learn as you play… <em>roll!</em>
         </h2>
 
         <form method="post" class="roll-form">
@@ -39,16 +39,16 @@
         </form>
     </div>
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--bottom">
-        {% include "lcars/_lcars_filler.html" with color="lavender-purple" bottom_left_inner_elbow=True only %}
+        {% include "lcars/_lcars_filler.html" with color="medium-carmine" bottom_left_inner_elbow=True only %}
     </div>
 </section>
 
 <section class="lcars-group">
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--top">
-        {% include "lcars/_lcars_filler.html" with color="lavender-purple" top_left_inner_elbow=True only %}
+        {% include "lcars/_lcars_filler.html" with color="medium-carmine" top_left_inner_elbow=True only %}
     </div>
-    <div class="lcars-group__left-bar">
-        {% include "lcars/_lcars_filler.html" with color="lavender-purple" top_left_outer_elbow=True bottom_left_outer_elbow=True only %}
+    <div class="lcars-group__side-bar lcars-group__side-bar--left">
+        {% include "lcars/_lcars_filler.html" with color="medium-carmine" top_left_outer_elbow=True bottom_left_outer_elbow=True only %}
     </div>
     <div class="lcars-group__content">
         <h2 class="lcars-group__content-header">
@@ -65,22 +65,22 @@
 
     </div>
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--bottom">
-        {% include "lcars/_lcars_filler.html" with color="lavender-purple" bottom_left_inner_elbow=True only %}
+        {% include "lcars/_lcars_filler.html" with color="medium-carmine" bottom_left_inner_elbow=True only %}
     </div>
 </section>
 
 <section class="lcars-group">
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--top">
-        {% include "lcars/_lcars_filler.html" with color="lavender-purple" top_left_inner_elbow=True label="SPECIAL SQUARE LEGEND" only %}
+        {% include "lcars/_lcars_filler.html" with color="medium-carmine" top_left_inner_elbow=True only %}
     </div>
-    <div class="lcars-group__left-bar">
-        {% include "lcars/_lcars_filler.html" with color="lavender-purple" top_left_outer_elbow=True bottom_left_outer_elbow=True only %}
+    <div class="lcars-group__side-bar lcars-group__side-bar--left">
+        {% include "lcars/_lcars_filler.html" with color="medium-carmine" top_left_outer_elbow=True bottom_left_outer_elbow=True only %}
     </div>
     <div class="lcars-group__content">
         {% include "will_of_the_prophets/board/_legend.html" %}
     </div>
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--bottom">
-        {% include "lcars/_lcars_filler.html" with color="lavender-purple" bottom_left_inner_elbow=True only %}
+        {% include "lcars/_lcars_filler.html" with color="medium-carmine" bottom_left_inner_elbow=True only %}
     </div>
 </section>
 
