Refactor lcars filler into its own scss file

--- a/will_of_the_prophets/static/will_of_the_prophets/styles/index.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/index.scss
@@ -25,7 +25,8 @@ a:visited {
 }
 
 @import "./board";
-@import "./lcars";
+@import "./lcars-filler";
+@import "./lcars-group";
 @import "./legend";
 @import "./roll-chart";
 @import "./roll-form";
