Move/update apple touch icons and other images

--- a/will_of_the_prophets/templates/base.html
+++ b/will_of_the_prophets/templates/base.html
@@ -5,6 +5,23 @@
 
 <head>
     <title>{% block title %}Game of Buttholes: The Will of the Prophets{% endblock %}</title>
+
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="{% static 'will_of_the_prophets/apple_touch_icons/default.png' %}" />
+    <link rel="apple-touch-icon" sizes="57x57" href="{% static 'will_of_the_prophets/apple_touch_icons/57x57.png' %}" />
+    <link rel="apple-touch-icon" sizes="72x72" href="{% static 'will_of_the_prophets/apple_touch_icons/72x72.png' %}" />
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'will_of_the_prophets/apple_touch_icons/76x76.png' %}" />
+    <link rel="apple-touch-icon" sizes="114x114"
+        href="{% static 'will_of_the_prophets/apple_touch_icons/114x114.png' %}" />
+    <link rel="apple-touch-icon" sizes="120x120"
+        href="{% static 'will_of_the_prophets/apple_touch_icons/120x120.png' %}" />
+    <link rel="apple-touch-icon" sizes="144x144"
+        href="{% static 'will_of_the_prophets/apple_touch_icons/144x144.png' %}" />
+    <link rel="apple-touch-icon" sizes="152x152"
+        href="{% static 'will_of_the_prophets/apple_touch_icons/152x152.png' %}" />
+    <link rel="apple-touch-icon" sizes="180x180"
+        href="{% static 'will_of_the_prophets/apple_touch_icons/180x180.png' %}" />
+
     <style>
         @font-face {
             font-family: 'lcars';
